# dyncast

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: args.rs  dyncast.rs  hash.rs  lib.rs  linker.rs  parse.rs
src/: generic_statics.rs  global.rs  lib.rs  map.rs  once.rs  private.rs  ptr.rs
tests/: basic.rs  dup.rs  generics.rs  seeded.rs
