[package]
name = "dyncast"
version = "0.1.0"
authors = ["cynecx <me@cynecx.net>"]
description = "Downcasting made easy"
documentation = "https://docs.rs/dyncast"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cynecx/dyncast"
rust-version = "1.74"

[dependencies]
sptr = "0.3.2"

dyncast-impl = { version = "=0.1.0", path = "./impl" }

[workspace]
members = ["impl"]
